# fuckass-visualizer

./: Cargo.toml  README.md  build.rs  icon.rgba
src/: cpal_audio.rs  main.rs  wasapi_audio.rs
