[package]
name = "testing"
version = "0.1.0"
edition = "2024"
authors = ["scrumblous"]

[dependencies]
cpal = "0.16.0"
defer-rs = "0.1.0"
hide_console = "0.2.1"
iced = { version ="0.13.1", features = ["canvas", "tokio", "image"] }
windows = { version = "0.52", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Media_Audio_DirectSound",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem"
] }

[build-dependencies]
winres = "0.1"
image = "0.25.6"

[profile.release]
panic = "abort"
strip = true
lto = true
